--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "artplayer": "^5.2.3",
+    "artplayer-plugin-chapter": "^1.0.1",
     "artplayer-plugin-hls-control": "^1.0.1",
     "geist": "^1.4.1",
     "hls.js": "^1.6.2",
