--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "monobar-next",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "private": true,
   "scripts": {
     "dev": "node version.js && next dev --turbopack",
@@ -14,6 +14,7 @@
     "artplayer-plugin-hls-control": "^1.0.1",
     "geist": "^1.4.1",
     "hls.js": "^1.6.2",
+    "js-cookie": "^3.0.5",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
