--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "monobar-next",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "private": true,
   "scripts": {
     "dev": "node version.js && next dev --turbopack",
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/line-clamp": "^0.4.4",
     "artplayer": "^5.2.3",
     "artplayer-plugin-chapter": "^1.0.1",
     "artplayer-plugin-hls-control": "^1.0.1",
